# tfl-training-sbi

./: .dockerignore  .gitignore  AGENDA.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  config.yml  entrypoint.sh  exercises.html  genindex.html  index.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: docker_build.yaml  test_and_render.yaml
_sources/: index.rst.txt  intro.rst.txt
_sources/tfl_training_sbi/: config.rst.txt  constants.rst.txt  data_utils.rst.txt  mdn.rst.txt  nb_utils.rst.txt  utils_models.rst.txt  utils_sir.rst.txt
_static/: nb_01_introduction_to_sbi.html  nb_02_conditional_density_estimation.html  nb_03_neural_density_estimation.html  nb_04_neural_likelihood_and_ratio_estimation.html  nb_05_evaluation_of_sbi.html
build_scripts/: build_docs.sh  install_presentation_requirements.sh
data/: sir_observatinos_full_length.npy  sir_thetas.npy  sir_thetas_full_length.npy  sir_x_obs.npy
docs/: conf.py  exercises.rst
notebooks/: nb_01_introduction_to_sbi.ipynb  nb_02_conditional_density_estimation.ipynb  nb_03_neural_density_estimation.ipynb  nb_04_evaluation_of_sbi.ipynb  nb_04_neural_likelihood_and_ratio_estimation.ipynb  nb_05_evaluation_of_sbi.ipynb  nb_10_PresentationTemplate.ipynb  nb_20_CopyMe.ipynb  nb_20_Introction_to_SBI.ipynb
scripts/: download_data.py  regression_housing_data.py  upload_data.py
tfl_training_sbi/: config.html  constants.html  data_utils.html  index.html  mdn.html  nb_utils.html  utils_models.html  utils_sir.html
(+43 files in other folders)
