# Black-compatible settings for isort
# See https://black.readthedocs.io/en/stable/compatible_configs.html
[tool.isort]
profile = "black"

[tool.poetry]
name = "tfl-training-sbi"
version = "0.1.0"
description = ""
authors = ["Maternus Herold"]

[tool.poetry.dependencies]
python = "^3.10"
rise = "^5.7.1"
jupyter = "^1.0.0"
nbconvert = "^7.2.10"
torch = "^2.0.0"
sbi = "^0.21.0"
matplotlib = "^3.7.1"
jupyter-contrib-nbextensions = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

