# Black-compatible settings for isort
# See https://black.readthedocs.io/en/stable/compatible_configs.html
[tool.isort]
profile = "black"

[tool.poetry]
name = "tfl-training-sbi"
version = "0.1.0"
description = ""
authors = ["Maternus Herold, Jan Boelts"]
packages = [
    { include = "tfl_training_sbi", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
rise = "^5.7.1"
jupyter = "^1.0.0"
nbconvert = "^7.2.10"
sbi = "^0.21.0"
matplotlib = "^3.7.1"
jupyter-contrib-nbextensions = "^0.7.0"
accsr = "^0.4.4"
cryptography = "^40.0.2"
click = "^8.1.3"
jupyter-book = "^0.15.1"
sphinx-rtd-theme = "^1.2.0"
ipykernel = "^6.23.2"
black = {extras = ["jupyter"], version = "^23.3.0"}
torch = ">=2.0.0"
torchvision = "^0.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

